using System;

class FileManager {

  private string _bookdatafile;
  private string _memberdatafile;

  public string BookDataFile
  {
    get { return _bookdatafile; }
    private set { _bookdatafile = value; }
  }

   public string MemberDataFile
  {
    get { return _memberdatafile; }
    private set { _memberdatafile = value; }
  }

  public void SaveBooks()
  {

  }

  public void LoadBooks()
  {
    
  }

  public void SaveMembers()
  {
    
  }

  public void LoadMembers()
  {
    
  }

  public void ConvertBookToString()
  {
    
  }


  public void ConvertStringToBooks()
  {
    
  }

  public void ConvertMemberToString()
  {
    
  }
    public void ConvertStringToMembers()
  {
    
  }







  
}
