@startuml Library System

Book <|-- FictionBook
Book <|-- NonFictionBook
FictionBook <|-- MysteryBook
FictionBook <|-- ScienceFictionBook
FictionBook <|-- FantasyBook
NonFictionBook <|-- BiographyBook
NonFictionBook <|-- SelfHelpBook
LibraryMember "1" -- "many" Book :contains
Library "1" -- "many" Book :contains
Library "1" -- "many" LibraryMember :contains
Library -- FileManager

class Library {
  - books: List<Book>
  - members: List<LibraryMember>
  - fileManager
  - InitializeBooks()
  - InitializeMembers()
  - SaveData()
  - LoadData()
  + AddBook()
  + RemoveBook()
  + SearchBookByTitle()
  + SearchBookByAuthor()
  + AddMember()
  + RemoveMember()
}

class FileManager {
  - bookDataFile: string
  - memberDataFile : string
  + SaveBooks()
  + LoadBooks()
  + SaveMembers()
  + LoadMembers()
  - ConvertBookToString()
  - ConvertStringToBooks()
  - ConvertMembersToString()
  - ConvertStringToMemebers()
}

class LibraryMember {
  - name: string
  - libraryID: string
  - borrowedBooks: List<Book>
  + getters
  # setters
  + BorrowBook()
  + ReturnBook()
  + DisplayBorrowedBooks()
}

class Book {
  # title: string
  # author: string
  # isbn: string
  # genre: string
  # availability: bool
  + getters
  # setters
  # DisplayBookDetails()
}

class FictionBook {
  # targetAge: int
  + DisplayBookDetails()
}

class NonFictionBook {
  # theme: string
  + DisplayBookDetails()
}

class MysteryBook {
  - detective: string
  - crime: string
  + DisplayBookDetails()
}

class ScienceFictionBook {
  - setting: string
  - technology: string
  + DisplayBookDetails()
}

class FantasyBook {
  - magicalCreatures: string
  - mythicalWorld: string
  + DisplayBookDetails()
}

class BiographyBook {
  - subject: string
  + DisplayBookDetails()
}

class SelfHelpBook {
  - topic: string
  + DisplayBookDetails()
}


@enduml
